EGR 323 Daily slides plus touched the date on the HW page

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/16/2019 7:03 pm)
+                              >(Last update: 3/22/2019 11:02 am)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,29 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 9
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/22
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        3/29
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!-- <a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br> -->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: High-frequency models of a BJT         <br>&nbsp; 
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				HF performance of CS, CE; Miller's Thm  <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				non-dom. HF poles, open-cct time const.<br>&nbsp;
+		Read 10.3, 10.4                                      <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do 10.18, +10.19, 10.32, 10.37, 10.51</DO>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  8
