EGR 170 published example solution of Essick problem 1.2

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/21/2019 8:11 pm)
+                              >(Last update: 3/25/2019 9:36 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -132,7 +132,15 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			page.  Additionally, your document should <br>&nbsp;
 			abide by other course <a href=
 			"https://dfdeboer.github.io/S19/HWSTDS19.HTM"
-			>standards</a> as usual.  
+			>standards</a> as usual.                   <br>&nbsp;
+			                                           <br>&nbsp;
+			An example solution to illustrate the above<br>&nbsp;
+			requirements is available in <a href=
+			"https://dordt.instructure.com/files/144820013/download?download_frd=1"
+			>MS Word</a> format <br>&nbsp;
+			and <a href=
+			"https://dordt.instructure.com/files/144820016/download?download_frd=1"
+			>PDF</a>.  
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  ---
