--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/25/2019 9:36 pm)
+                              >(Last update: 3/25/2019 10:32 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -140,7 +140,17 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			>MS Word</a> format <br>&nbsp;
 			and <a href=
 			"https://dordt.instructure.com/files/144820016/download?download_frd=1"
-			>PDF</a>.  
+			>PDF</a>.                                  <br>&nbsp;
+                                                       <br>&nbsp;
+			Hint:  Do you want to zoom in on your block<br>&nbsp;
+			diagram?  View|Zoom is not available within<br>&nbsp;
+			LabVIEW, but the <a href=
+			"https://support.microsoft.com/en-us/help/11542/windows-use-magnifier"
+			>Windows Magnifier</a> works.  <br>&nbsp;
+			Note: The tip on the linked page about     <br>&nbsp;
+			reducing screen resolution is far inferior <br>&nbsp;
+			for this particular need compared to       <br>&nbsp;
+			learning to use Windows Magnifier. 
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  ---
@@ -197,7 +207,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			in Chapter 13.  GNU Octave starts showing incom-<br>&nbsp;
 			patibility with MATLAB when advanced features  <br>&nbsp;
 			such as high-level I/O and GUI uicontrol are used.<br>&nbsp;
-			But. . .  If you really try hard, GNU Octve can <br>&nbsp;
+			But. . .  If you really try hard, GNU Octave can <br>&nbsp;
             do these tasks.  Keep these things in mind:<br>&nbsp;
 			&bull; Octave does not support nested functions.  <br>&nbsp;
 			&bull; Octave does not fully support local functions.<br>&nbsp;
@@ -240,7 +250,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			11.2  <CN><b>set</b></CN> only, <!-- plot methods to control color -->
 			11.3, <!-- bar chart methods to control color --> 
 			</D4><br>&nbsp;
-		Help on Problem 11.2 avalable <a href="Help_on_Problem_11_2.pdf">here</a>.<br>&nbsp;
+		Help on Problem 11.2 available <a href="Help_on_Problem_11_2.pdf">here</a>.<br>&nbsp;
 			                                           <br>&nbsp;
 		No need to spend time making files.            <br>&nbsp;
 		Spreadsheet for 9.3 can be downloaded <a href="attaway4th9p3.xls" download>here</a><br>&nbsp;
@@ -306,7 +316,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 				 passing parameters to and from functions<br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-				 scope of variables, persistance, debugging<br>&nbsp;
+				 scope of variables, persistence, debugging<br>&nbsp;
 		Read:  Attaway, Chapters 5, 6                  <br>&nbsp;
 		                                               <br>&nbsp;
 		Do homework in <D4>Attaway 4th ed.             <br>&nbsp;
