--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/25/2019 10:32 pm)
+                              >(Last update: 3/26/2019 8:09 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -150,7 +150,11 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			Note: The tip on the linked page about     <br>&nbsp;
 			reducing screen resolution is far inferior <br>&nbsp;
 			for this particular need compared to       <br>&nbsp;
-			learning to use Windows Magnifier. 
+			learning to use Windows Magnifier.         <br>&nbsp;
+			                                           <br>&nbsp;
+			Additional hints can be found <a href=
+			"https://dordt.instructure.com/files/144870129/download?download_frd=1"
+			>here</a>.
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  ---
