EGR 323 daily slides poeted

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -221,14 +221,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/144806788/download?download_frd=1"><!-- -->
-	  3/25<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/27<!-- --</a><!-- --><br><!-- --<a href=
+	  3/25<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/144906252/download?download_frd=1"><!-- -->
+      3/27<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       3/29<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->Ads, HF performance of CS and CE, Miller's Theorm<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Ads, HF performance of CS and CE, Miller's Theorm for impedances<!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Miller's for addmitance, dominant pole&mdash;optimistic&mdash;pesimistic estimate of <i>f<sub>L</sub></i><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
