Updated due date, EGR 170 PS$4

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -103,7 +103,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
         <a href="https://dordt.instructure.com/courses/2481201/assignments/21575950"
-		>3/28</a>
+		>4/04</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         ---
@@ -154,7 +154,12 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 			                                           <br>&nbsp;
 			Additional hints can be found <a href=
 			"https://dordt.instructure.com/files/144870129/download?download_frd=1"
-			>here</a>.
+			>here</a>.                                 <br>&nbsp;
+			                                           <br>&nbsp;<small>
+			(On 3/27 at about 5:15 pm Prof <span style="font-family:Garamond; 
+			font-size:120%">d</span><span style="font-family:Garamond; 
+			font-size:80%">DB</span> delayed the due   <br>&nbsp;
+			date on this assignment by a week.)</small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  ---
