--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/28/2019 1:41 pm)
+                              >(Last update: 3/28/2019 11:01 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -96,6 +96,42 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
     Assignment                                       </b></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+  8
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/28
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575953"
+		>4/11</a>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        ---
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		Topics:  NI LabVIEW MathScript, XY Plots, File/IO<br>&nbsp;
+		Read in:  Essick 3rd, Chapters 4, 6            <br>&nbsp;
+		Or read: Essick 4th, Chapters 4, 7             <br>&nbsp;
+		                                               <br>&nbsp;
+		Do homework in <DO>Essick, 3rd ed.             <br>&nbsp;
+		    4.2, <!-- plot a spiral -->
+			4.6, <!-- projectile range -->
+			6.3 <!-- 4 text files --></DO>             <br>&nbsp;
+			                                           <br>&nbsp;
+		Or do homework in <DO>Essick, 4rd ed.          <br>&nbsp;
+		    4.2, <!-- plot a spiral -->
+			4.6, <!-- projectile range -->
+			7.3 <!-- 4 text files --></DO>             <br>&nbsp;
+			                                           <br>&nbsp;
+		Hints:          							   <br>&nbsp;
+		4.2 Create <i>x</i>, <i>y</i>, in Mathscript, bundle, XY Graph<br>&nbsp;
+		x.3 For loop iterates from 0 to 3.  Iteration  <br>&nbsp; &nbsp; &nbsp; &nbsp;
+		    can be used to make filenames unique.      <br>&nbsp; &nbsp; &nbsp; &nbsp;
+			Each iteration opens, writes, closes a file.<br>&nbsp; &nbsp; &nbsp; &nbsp;
+			Text Section 6.8 or 7.8 is helpful.        <br>&nbsp; &nbsp; &nbsp; &nbsp;
+			The <b>Build Path</b> function is helpful. 
+
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
   7
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -113,7 +149,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		         forms, data types, owned vs. free labels<br>&nbsp;
 		Read:  Essick, Chapters 1, 2, and 3.           <br>&nbsp;
 		                                               <br>&nbsp;
-		Do homework in <DO>Essick 4th ed.             <br>&nbsp;
+		Do homework in <DO>Essick 3rd or 4th ed.       <br>&nbsp;
 		    1.1,  <!-- Integer detector -->
 			1.3 (optional:  label the output "R1||R2" <br>&nbsp;
 			instead of "Equivalent Resistance."),<!-- Foozlebang calculator -->
