Fixed some typos in EGR 170 homework page

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -106,7 +106,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>4/11</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        ---
+        &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  NI LabVIEW MathScript, XY Plots, File/IO<br>&nbsp;
 		Read in:  Essick 3rd, Chapters 4, 6            <br>&nbsp;
@@ -142,7 +142,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>4/04</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        ---
+        &nbsp;
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  NI LabVIEW introduction, loops, wave- <br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
