EGR 323 daily slides

--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -223,13 +223,15 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/144806788/download?download_frd=1"><!-- -->
 	  3/25<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/144906252/download?download_frd=1"><!-- -->
-      3/27<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      3/29<!-- --</a><!-- --></td>
+      3/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/145009085/download?download_frd=1"><!-- -->
+      3/29<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Ads, HF performance of CS and CE, Miller's Theorm for impedances<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Miller's for addmitance, dominant pole&mdash;optimistic&mdash;pesimistic estimate of <i>f<sub>L</sub></i><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><font face="times new roman"><i>T</i>(<i>s</i>) = 
+	  <i>F<sub>L</sub></i>(<i>s</i>) <i>A<sub>M</sub> F<sub>H</sub></i>(<i>s</i>)</font> 
+	  and the method of open-circuit time constants<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
