--- a/Texts.htm
+++ b/Texts.htm
@@ -35,7 +35,7 @@
 
    <p align="center"><b>Professor De Boer's Textbook Requisitions</b></p>
                                                        <p align="center">
-          (Last updated on Tuesday, November 20, 2018)</p><p>
+          (Last updated on Monday, April 1, 2019)</p><p>
    
    The links below will show you which textbooks Professor De Boer has 
    ordered for each of his courses.  (For ISBNs and full details, click 
@@ -50,32 +50,20 @@
    to get back to this page from one of the requisition pages linked below.
    <br><br>
 
-   <br><u><b>Spring 2019 courses</b></u>
+   <br><u><b>Fall 2019 course</b></u>
    </td></tr></table>
    <table align="center" width="520" border="0" cellpadding="0">
    
-   <!--EGR 170--> 
+   <!--EGR 204--> 
    <tr><td colspan="2"><a href="S19/170/170S19_Textbook_Requisitions.htm">
-   EGR 170-02, <br>
-   Engineering Programming for Instrumentation and Automation</a></td></tr><tr>
+   EGR 204, <br>
+   Intro. to Microprocessors and Digital Circuits (with lab)</a></td></tr><tr>
    <td width="221">
-   <a href="S19/170/170S19_Textbook_Requisitions.htm">
-   <img src="S19/170/Attaway4_MatLAB_Cover_9780128045251_small.png" style="border-style: none"/>
-   <img src="S19/170/Essick_LabVIEW_Text_Cover_9780190853068_small.jpg" style="border-style: none"/></a></td>
-   <td valign="top"><br><br>
-   The information linked here<br> only applies to Section 02. </td>
-   </tr>
- 
-   <!--EGR 323--> 
-   <tr><td colspan="2"><a href="S19/323/323S19_Textbook_Requisitions.htm"><br><br>
-   EGR 323, Electronics II (with lab)</a></td></tr><tr>
-   <td width="221">
-   <a href="S19/323/323S19_Textbook_Requisitions.htm">
-   <img src="S19/323/Sedra_Smith_7_Cover_104x130.jpg" style="border-style: none"/>
-   </a></td>
+   <a href="F19/204/204F19_Textbook_Requisitions.htm">
+   <img src="F19/204/ManoKimeMartin5Cover100x132_0133760634.png" style="border-style: none"/>
+   </td>
    <td valign="top"><br><br></td>
    </tr>
- 
   
    <!--Horizontal Rule-->  
    <tr><td colspan="2"><br>
@@ -86,6 +74,12 @@
 </table>
 <table align="center" width="520" border=0 cellpadding=0><tr><td><small>
    <b>Past Courses Instructed by Professor De Boer</b><br><br>
+
+   <br><u><b>Spring 2019 courses</b></u><br>
+   <a href="S19/170/170S19_Textbook_Requisitions.htm">
+      EGR 170-02, Engineering Programming for Instrumentation and Automation</a><br>
+   <a href="S19/323/323S19_Textbook_Requisitions.htm">
+      EGR 323, Electronics II (with lab)</a><br>
 
    <br><u><b>Fall 2018 course</b></u><br>
    <a href="F18/322/322F18_Textbook_Requisitions.htm">
