EGR 170 Posted PS#9

--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -67,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/28/2019 11:01 pm)
+                              >(Last update: 4/05/2019 1:37 am)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -96,6 +96,36 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
     Assignment                                       </b></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+  9
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/05
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575955"
+		>4/18</a>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		Topics:  DAQ Hardware, Analog, digital signals <br>&nbsp;
+		Read in:  Essick 3rd, Chapter 5                <br>&nbsp;
+		Or read: Essick 4th, Chapters 5 and 6          <br>&nbsp;
+		All students should notice extended material   <br>&nbsp;
+		contained on classroom slides for 4/04, 4/11   <br>&nbsp;
+		                                               <br>&nbsp;
+        <D5>All students do homework:</D5> <a href=
+		"https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		>5.A</a>                                       <br>&nbsp;
+		(Click <a href=
+		"https://dordt.instructure.com/files/145494723/download?download_frd=1"
+		>link</a> to view homework problem.)           <br>&nbsp;
+                                                       <br>&nbsp;
+        Note: At least one more problem will be added  <br>&nbsp;
+		to this problem set before Thursday, 4/11.
+
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
   8
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -112,10 +142,10 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		Read in:  Essick 3rd, Chapters 4, 6            <br>&nbsp;
 		Or read: Essick 4th, Chapters 4, 7             <br>&nbsp;
 		                                               <br>&nbsp;
-		Do homework in <DO>Essick, 3rd ed.             <br>&nbsp;
+		Do homework in <D5>Essick, 3rd ed.             <br>&nbsp;
 		    4.2, <!-- plot a spiral -->
 			4.6, <!-- projectile range -->
-			6.3 <!-- 4 text files --></DO>             <br>&nbsp;
+			6.3 <!-- 4 text files --></D5>             <br>&nbsp;
 			                                           <br>&nbsp;
 		Or do homework in <DO>Essick, 4rd ed.          <br>&nbsp;
 		    4.2, <!-- plot a spiral -->
@@ -142,7 +172,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
 		>4/04</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;
+        ---
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
 		Topics:  NI LabVIEW introduction, loops, wave- <br>&nbsp;
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
