EGR 323 daily update, slides, PS#11

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 4/03/2019 5:14 pm)
+                                >(Last update: 4/05/2019 2:48 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,6 +84,29 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted)       </DIV></B>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+11
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        4/05
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        4/12<br><!-- <span style="color: #CC4444";>&#9673;</span> -->
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!-- <a href=
+        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
+        >9/17</a><br> -->
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: HF performance of CG, cascode          <br>&nbsp; 
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				HF perf. of Source and Emitter Followers<br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				non-dom. HF poles, open-cct time const.<br>&nbsp;
+		Read 10.5, 10.6                                <br>&nbsp;
+		                                               <br>&nbsp;
+		<DO>Do +10.86, 10.87, +10.88, 10.96, +10.106</DO>.
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
 10
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -97,12 +120,8 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: HF performance of CG, cascode          <br>&nbsp; 
-		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-				HF perf. of Source and Emitter Followers<br>&nbsp;
-		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-				non-dom. HF poles, open-cct time const.<br>&nbsp;
-		Read 10.5, 10.6                                <br>&nbsp;
+        Topics: HF performance of diff amp, darlington <br>&nbsp; 
+		Read 10.7, 10.8                                <br>&nbsp;
 		                                               <br>&nbsp;
 		<DO>Do +10.63, +10.66, 10.80, +10.84</DO>.
 <!-- ------------------------------------------ --></TD></TR><TR>
