--- a/S19/323/323S19DN.HTM
+++ b/S19/323/323S19DN.HTM
@@ -238,13 +238,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/145273754/download?download_frd=1"><!-- -->
 	  4/01<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/145433930/download?download_frd=1"><!-- -->
-      4/03<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      4/05<!-- --</a><!-- --></td>
+      4/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/145530137/download?download_frd=1"><!-- -->
+      4/05<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Application of open circuit time constants to the CG amplifier configuration<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Open circuit time constants appled to CG, cascode<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->HF performance of follower amplifiers (CD and CC)<!--end comment--></td>  
    </TR><!-- Week of 1/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
