--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/05/2019 3:15 pm)
+                                >(Last update: 4/05/2019 4:14 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -132,7 +132,7 @@ PS                                                           <BR>
         3/22
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        3/29<br><span style="color: #CC9900";>&#9679;</span>
+        3/29<br><span style="color: #336633";>&#10003;</span>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		4/03<!-- <a href=
