--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/05/2019 4:14 pm)
+                                >(Last update: 4/05/2019 11:14 pm)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -135,9 +135,9 @@ PS                                                           <BR>
         3/29<br><span style="color: #336633";>&#10003;</span>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		4/03<!-- <a href=
-        "https://dordt.instructure.com/files/134540373/download?download_frd=1"
-        >9/17</a><br> -->
+		<a href=
+        "https://dordt.instructure.com/files/145547402/download?download_frd=1"
+        >4/03</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: High-frequency models of a BJT         <br>&nbsp; 
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
