EGR 323 PS#10, 11 had reading assignments swapped.  Fixed it and published returned date for PS#10

--- a/S19/323/323S19PS.HTM
+++ b/S19/323/323S19PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update: 4/05/2019 11:14 pm)
+                                >(Last update: 4/08/2019 9:29 am)
 <!-- ------------------------------------------------------- -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -97,12 +97,8 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: HF performance of CG, cascode          <br>&nbsp; 
-		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-				HF perf. of Source and Emitter Followers<br>&nbsp;
-		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-				non-dom. HF poles, open-cct time const.<br>&nbsp;
-		Read 10.5, 10.6                                <br>&nbsp;
+        Topics: HF performance of diff amp, darlington <br>&nbsp; 
+		Read 10.7, 10.8                                <br>&nbsp;
 		                                               <br>&nbsp;
 		<DO>Do +10.86, 10.87, +10.88, 10.96, +10.106</DO>.
 <!-- ------------------------------------------ --></TD></TR><TR>
@@ -116,12 +112,16 @@ PS                                                           <BR>
         4/05<br><span style="color: #CC4444";>&#9673;</span>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!-- <a href=
+		4/08<!-- <a href=
         "https://dordt.instructure.com/files/134540373/download?download_frd=1"
         >9/17</a><br> -->
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: HF performance of diff amp, darlington <br>&nbsp; 
-		Read 10.7, 10.8                                <br>&nbsp;
+        Topics: HF performance of CG, cascode          <br>&nbsp; 
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				HF perf. of Source and Emitter Followers<br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				non-dom. HF poles, open-cct time const.<br>&nbsp;
+		Read 10.5, 10.6                                <br>&nbsp;
 		                                               <br>&nbsp;
 		<DO>Do +10.63, +10.66, 10.80, +10.84</DO>.
 <!-- ------------------------------------------ --></TD></TR><TR>
