Newly found errata on Sedra & Smith 7th, pages 768, 800

--- a/errata/Sedra_Smith/7th/S_S_7_ER.HTM
+++ b/errata/Sedra_Smith/7th/S_S_7_ER.HTM
@@ -16,7 +16,7 @@ HREF="https://www.dordt.edu/academics/undergraduate-programs/4-year-programs/eng
               DORDT COLLEGE ENGINEERING DEPARTMENT</b></A><br><a href=
 			  "../../err.htm"
                        >TEXTBOOK ERRATA</a><br>
-                    (last update 3/16/2019)<br> 
+                    (last update 4/10/2019)<br> 
                                <br>
     <img src="Sedra_Smith_7_Cover_120x150.jpg" width="120" height="150"
                    alt="Photo of textbook"><br>
@@ -88,7 +88,7 @@ Page 45,  Problem 1.7</b><br>
    
                                              <A NAME="P74"></A><b>
 Page 74,  Equation 2.9</b><br>
-   The ratio of resistances is the recoprocal of what it should
+   The ratio of resistances is the reciprocal of what it should
    be.  The correct equation is:<br> &nbsp; &nbsp; &nbsp; &nbsp; 
    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
@@ -150,7 +150,7 @@ Page 240,  Problem 4.66 parts (c, d)</b><br>
    nominal output voltage, corresponding to the &plusmn;25% 
    change in <i>V<sub>S</sub></i>?"                       <br><br>
    
-   In part (d), again add the pharase, "of the nominal output 
+   In part (d), again add the phrase, "of the nominal output 
    voltage" so that the second sentence of part (d) reads, 
    "By what percentage of the nominal output voltage does 
    <i>V<sub>O</sub></i> change from the no-load to the full-load 
@@ -231,7 +231,7 @@ Page 292, Problem D5.5 </b><br>
 Page 295, Problem 5.24</b><BR>
    In the problem statement replace "(a)" with "(i)" and 
    replace "(b)" with "(ii)."  Leave the "(a)" and "(b)" in 
-   Figure P5.24 as thay are.  There are two parts to the problem,
+   Figure P5.24 as they are.  There are two parts to the problem,
    part (i) and part (ii) and each of those parts needs to be 
    considered once for (a) the n-channel MOSFET and once for (b)
    the p-channel MOSFET, a total of four things to consider. <br>
@@ -434,7 +434,7 @@ Page 588, Problem 8.78.</b><br>
 Pages 632, 633, Example 9.4.</b><br>
    There is no errata in the textbook on these pages, but. . .<br>
    The publisher's errata on these pages is itself errata.<br>
-   Ignore the publisher's erratta on pages 632 and 633.<br>
+   Ignore the publisher's errata on pages 632 and 633.<br>
    Here is a <a href="S_S_7_errata_P632ff.pdf"
    >more complete version of Example 9.4</a>.     
    &nbsp; &nbsp; &nbsp; &nbsp; 
@@ -459,6 +459,71 @@ Page 707, Equation 10.13.</b><br>
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
    <i><small>(Posted 3/06/2019)</small></i><br><br>
+   
+                                           <A NAME="P768"></A><b>
+Page 768, Figure 10.34 (a).</b><br>
+   At the drain of <i>Q<sub>S</sub></i> (the blue text) change 
+   <i>Z<sub>SS</sub></i> = 
+   <i>R<sub>SS</sub></i>||<i>C<sub>SS</sub></i> to 
+   <i>Z<sub>SS</sub></i> = 
+   <i>R<sub>SS</sub></i>||<i>Z<sub>C<sub>SS</sub></sub></i><blockquote><small>
+   
+   The operator colloquially called "in parallel with" can be 
+   interpreted as a mathematical operator.  To wit,<br><br>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+    &nbsp; &nbsp; &nbsp; &nbsp; 
+   
+   <i>a</i>||<i>b</i> = 1/[(1/<i>a</i>) + (1/<i>b</i>)]<br><br>
+   
+   In other words, || can mean, 
+   &quot;take the reciprocal of the sum of the reciprocals.&quot;
+   Given this interpretation, the expression 
+   <i>R<sub>SS</sub></i>||<i>C<sub>SS</sub></i> has a mis-match 
+   of units.  Expressing this concept in terms of impedances is 
+   more correct.<br><br>
+   
+   The use of the || symbol as a mathematical 
+   operator, rather than simply as a substitute for the phrase, 
+   &quot;in parallel with&quot; is well entrenched in electrical 
+   engineering literature but is not formally standardized as 
+   far as Prof. <span style="font-family:Garamond; font-size:120%"
+   >d</span><span style="font-family:Garamond; font-size:80%"
+   >DB</span> knows.  This can lead to real confusion.  For
+   example, in the expression <br><i>C<sub>eq</sub></i> = 
+   <i>C<sub>1</sub></i>||<i>C<sub>2</sub></i> does this mean that 
+   the capacitors are, &quot;in parallel&quot; and thus the 
+   equivalent capacity is a sum, or does it mean that the capacitors
+   are in series and the equivalent capacity is, &quot;the reciprocal of
+   the sum of the reciprocals?&quot;  This confusion can be avoided by
+   using the parallel symbol, ||, only with impeadances, e.g.
+   <i>Z<sub>eq</sub></i> = <i>Z<sub>C<sub>1</sub></sub></i>||<i>Z<sub>C<sub>2</sub></sub></i>. 
+   Then the symbol means the same thing no matter which way 
+   it is interpreted. <br><i>Reference</i>:  
+   Wikipedia talk page on &quot;Parallel (operator)&quot; <br><a href=
+   "https://en.wikipedia.org/wiki/Talk:Parallel_(operator)"
+   >https://en.wikipedia.org/wiki/Talk:Parallel_(operator)</a>
+   <i>(Posted 4/10/2019)</i></small></blockquote>
+   
+                                       <A NAME="P800_10p80"></A><b>
+Page 800, Problem 10.80, last line of the problem statement</b><br>
+(More easiliy noticed as the line just above Problem 10.81.)<br>
+If your printing of the textbook shows the line as, 
+   <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i>g<sub>m</sub></i> = 5 ma/V, <i>C<sub>gd</sub></i> = 10 pF, 
+   and <i>C<sub>gs</sub></i> = 2 pF.<br>
+   then swap the capacitor values around.<br><br>
+
+   The correct line is:
+   <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i>g<sub>m</sub></i> = 5 ma/V, <i>C<sub>gd</sub></i> = 2 pF, 
+   and <i>C<sub>gs</sub></i> = 10 pF.<blockquote><small>
+   
+   This error has been fixed in later printings.  The corrected 
+   line is consistent with the answer given in the instructor's 
+   solution manual.  It also, "just makes sense," because 
+   usually <i>C<sub>gd</sub></i> < <i>C<sub>gs</sub></i>.
+   <i>(Posted 4/10/2019)</i></blockquote>
    
 <!-- Can't find this in the 7th            <A NAME="P668"></A><b>
 Page 668, Problem 8.11.</b><br>
@@ -538,7 +603,7 @@ Pages 817 and 818, Bottom half of the page</b><br>
    adding the word "power" in two places so that the line 
    reads:<br>
    ". . .precisely, to increase the ratio of signal power to 
-   interferance power.  However. . ."<br><br>
+   interference power.  However. . ."<br><br>
    
    Change the line just above Equation 11.15 by <br>
    adding the word "power" so that the line reads:<br>&nbsp; &nbsp;
@@ -551,7 +616,7 @@ Pages 817 and 818, Bottom half of the page</b><br>
    
    Change the line above Equation 11.17 by <br>
    adding the word "power" so that the line reads:<br>&nbsp; &nbsp; 
-   "Thus the signal-to-interferane power-ratio at the output
+   "Thus the signal-to-interference power-ratio at the output
    becomes"<br><br>
    
    Change Equation 11.17 to &nbsp; &nbsp; 
@@ -594,7 +659,7 @@ Pages 817 and 818, Bottom half of the page</b><br>
    >Signal-to-noise ratio</a>."<br><br>
    
    A few other authors along with Sedra and Smith treat 
-   signal-to-noise ratio (or signal to interferance ratio) as 
+   signal-to-noise ratio (or signal to interference ratio) as 
    a voltage ratio (not a power ratio), nevertheless, it does 
    not agree with industry practice.  Some examples are:<br>
    
@@ -1355,7 +1420,7 @@ Page 241 Problem 4.78</b><br><font color="green">
    and 4.77.  Problem 4.77 refers to Problem 4.70.  Problem 4.70 
    refers by name&mdash;not by figure number&mdash;to Figure 4.23, 
    but students are supposed to substitute Figure 4.24 because 
-   problem 4.71 refers to that by name and by way of superceding
+   problem 4.71 refers to that by name and by way of superseding
    problem 4.70 because problem 4.78 mentions problem 4.71 instead
    of Problem 4.70.  Even some professors have a hard time 
    understanding the question as presented in the textbook!)</font><br>
@@ -1394,7 +1459,7 @@ Page 241 Problem 4.79</b><br>
    and 4.77.  Problem 4.77 refers to Problem 4.70.  Problem 4.70 
    refers by name&mdash;not by figure number&mdash;to Figure 4.23, 
    but students are supposed to substitute Figure 4.25 because 
-   problem 4.71 refers to that by name and by way of superceding
+   problem 4.71 refers to that by name and by way of superseding
    problem 4.70 because problem 4.79 mentions problem 4.72 instead
    of Problem 4.70.  Even some professors have a hard time 
    understanding the question as presented in the textbook!)<br>
@@ -1423,11 +1488,11 @@ Page 498, Problem 7.120.</b><br>
    The "50-<img src="omega_uc.gif" alt="ohm"> coaxial cable" is 
    just a wire with a shield around it.  Specifically, the 
    resistance from one end of the cable to the other is ZERO.  
-   The reisistance from the drain of <i>Q</i><sub>1</sub> to 
+   The resistance from the drain of <i>Q</i><sub>1</sub> to 
    the source of <i>Q</i><sub>2</sub> is 0 <img src="omega_uc.gif" 
    alt="ohms">. <br><br>
    
-   However, the cable is long enough so that it takes a noticable 
+   However, the cable is long enough so that it takes a noticeable 
    amount of time for a signal to travel through the cable (or wire).  
    Because of this propagation time, the cable works better when 
    the load on the cable is of the specific value for which the 
